--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,19 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Prova de Vida Digital" />
     <meta name="twitter:description" content="Realize sua comprovação de vida em poucos minutos pelo aplicativo oficial." />
-    
+
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <link rel="preload" href="https://scripts.converteai.net/caa6e073-04d6-4c37-83ad-a1ca076f9159/players/69292ef34b49fe32335d1c3a/v4/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/lib/js/smartplayer-wc/v4/smartplayer.js" as="script">
+    <link rel="preload" href="https://cdn.converteai.net/caa6e073-04d6-4c37-83ad-a1ca076f9159/69292eedcfa33c2e0a9bc54a/main.m3u8" as="fetch">
+    <link rel="dns-prefetch" href="https://cdn.converteai.net">
+    <link rel="dns-prefetch" href="https://scripts.converteai.net">
+    <link rel="dns-prefetch" href="https://images.converteai.net">
+    <link rel="dns-prefetch" href="https://api.vturb.com.br">
   </head>
   <body>
     <div id="root"></div>
