--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <title>Prova de Vida Digital - Governo Federal</title>
-    <meta property="og:title" content="Prova de Vida Digital - Governo Federal" />
-    <meta property="og:description" content="Realize sua comprovação de vida em poucos minutos pelo aplicativo oficial. Sem filas, sem burocracia." />
+    <title>Prova de Vida Digital - Guia do Beneficiário</title>
+    <meta property="og:title" content="Prova de Vida Digital - Guia do Beneficiário" />
+    <meta property="og:description" content="Saiba como realizar sua prova de vida digital em poucos minutos, de forma prática e segura. Sem filas, sem burocracia." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Prova de Vida Digital" />
-    <meta name="twitter:description" content="Realize sua comprovação de vida em poucos minutos pelo aplicativo oficial." />
+    <meta name="twitter:title" content="Prova de Vida Digital - Guia do Beneficiário" />
+    <meta name="twitter:description" content="Saiba como realizar sua prova de vida digital em poucos minutos, de forma prática e segura." />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
